# obsidian_vault_pipeline

./: .coderabbit.yaml  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  MILESTONE.md  MILESTONE.zh-CN.md  PACKS.md  PRODUCT_SURFACES.md  PUSH_GUIDE.md  PUSH_TO_GITHUB.sh  README.md  README.zh-CN.md  README_EN.md  RUNTIME.md  dist-workspace.toml  findings.md  obsidian-vault-pipeline.skill  pinboard-processor.py  progress.md  pyproject.toml  requirements.txt  task_plan.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  portal.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: local-commands.toml  open-external.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/ovp-api-projection/: Cargo.toml
crates/ovp-api-projection/src/: bodies.rs  graph.rs  lib.rs  readers.rs  redact.rs
crates/ovp-app/: Cargo.toml
crates/ovp-app/src/: assembler.rs  error.rs  lib.rs  node_kind.rs  registry.rs  spec.rs  wiring.rs
crates/ovp-app/tests/: assembled_pipelines.rs
crates/ovp-cli/: Cargo.toml
crates/ovp-cli/examples/: migrate_live_fixture.rs
crates/ovp-cli/src/: main.rs  progress.rs
crates/ovp-cli/src/commands/: apply_plan.rs  ask.rs  auto_run.rs  client.rs  compare_run.rs  console_cmd.rs  crystal_lint.rs  crystal_review.rs  crystal_review_session.rs  crystal_synth.rs  crystal_synth_ab.rs  crystal_synth_llm.rs  crystal_terrain.rs  crystal_theme_pages.rs  crystal_themes.rs  crystal_write.rs  daily.rs  defaults.rs  digest.rs  doctor.rs  evolve.rs  extract_referents.rs  extract_units.rs  graph.rs  index_cmd.rs  intake.rs  interpret_article.rs  lint.rs  mcp.rs  mcp_guidance.rs  mod.rs  pinboard_sync.rs  project.rs  publish.rs  query.rs  rag.rs  read_source.rs  run.rs  run_cycle.rs  schedule.rs  (+4 more)
crates/ovp-cli/tests/: crystal_synth_live_e2e.rs  m31_e2e.rs
crates/ovp-console/: Cargo.toml
crates/ovp-console/src/: lib.rs  ops.css  ops.rs  render.rs
crates/ovp-core/: Cargo.toml
crates/ovp-core/src/: applier.rs  error.rs  event.rs  fakes.rs  filter.rs  graph.rs  lib.rs  manifest.rs  plan.rs  record.rs
crates/ovp-core/tests/: fake_pipeline.rs
crates/ovp-daily/: Cargo.toml
crates/ovp-daily/src/: heartbeat.rs  ledger.rs  lib.rs  report.rs
crates/ovp-daily/tests/: daily_loop.rs
crates/ovp-domain/: Cargo.toml
crates/ovp-domain/prompts/: article_concept_map.md  article_interpret.md  card_synthesis.md  cluster_select.md  copy_probe.md  crystal_strength.md  crystal_synth.md  paper_interpret.md  referent_classify.md  tag_classify.md  theme_label.md  theme_page.md  unit_extraction.md
crates/ovp-domain/src/: body.rs  canonical.rs  canonical_slug.rs  concept_registry.rs  crystal.rs  evergreen.rs  evergreen_note.rs  interpreted.rs  knowledge_index.rs  lib.rs  moc.rs  model_reply.rs  paper_doc.rs  prompt.rs  providers.rs  response.rs  source_doc.rs  tags.rs  url_entities.rs  vault_layout.rs
crates/ovp-domain/src/crystal/: select.rs  synth.rs  theme_pages.rs  themes.rs
crates/ovp-domain/src/reader/: cards.rs  mod.rs  pack.rs  pipeline.rs
crates/ovp-domain/src/referents/: harness.rs  mod.rs  parser.rs  prompt.rs  review_pack.rs  validator.rs
crates/ovp-domain/src/sinks/: article_vault_plan.rs  evergreen_sink.rs  mod.rs  paper_vault_plan.rs
crates/ovp-domain/src/sources/: inbox_scan.rs  markdown_inbox.rs  mod.rs
crates/ovp-domain/src/testing/: contract.rs  mod.rs
crates/ovp-domain/src/transforms/: article_parser.rs  mod.rs  (+6 more)
crates/ovp-domain/tests/: article_clean.rs  article_mixed_lang.rs  body_round_trips.rs  concept_map_v2_synthetic.rs  contract_engine.rs  m14a_units.rs  markdown_inbox.rs  paper_arxiv.rs  review_hygiene_m35.rs
crates/ovp-embed/: Cargo.toml
crates/ovp-embed/examples/: embed_dir.rs
crates/ovp-embed/src/: cache.rs  ctfidf.rs  embedder.rs  knn.rs  lib.rs  louvain.rs
crates/ovp-enrich/: Cargo.toml
crates/ovp-enrich/src/: github.rs  image_download.rs  lib.rs  web_fetch.rs
crates/ovp-eval/: Cargo.toml
crates/ovp-eval/src/: compare.rs  lib.rs  normalize.rs  nowledge.rs  pack.rs
crates/ovp-eval/tests/: eval_e2e.rs
crates/ovp-evolve/: Cargo.toml
crates/ovp-evolve/src/: ab_runner.rs  candidate.rs  ledger.rs  lib.rs  registry.rs  root_cause.rs  scorecard.rs  types.rs
crates/ovp-index/: Cargo.toml
crates/ovp-index/src/: build.rs  evidence.rs  lib.rs  model.rs  query.rs  score.rs
crates/ovp-index/tests/: index_build.rs
crates/ovp-intake/: Cargo.toml
crates/ovp-intake/src/: ledger.rs  lib.rs  pinboard.rs  sweep.rs  vaultops.rs
crates/ovp-intake/tests/: intake_e2e.rs
crates/ovp-lint/: Cargo.toml
crates/ovp-lint/src/: lib.rs
crates/ovp-lint/tests/: lint_checks.rs
crates/ovp-llm/: Cargo.toml
crates/ovp-llm/src/: anthropic.rs  cache.rs  client.rs  fixture.rs  key.rs  lib.rs  live.rs  reply.rs  request.rs
crates/ovp-llm/tests/: clients.rs
crates/ovp-mcp/: Cargo.toml
crates/ovp-mcp/src/: lib.rs
crates/ovp-memory/: Cargo.toml
crates/ovp-memory/src/: agent.rs  agent_transcript.rs  ask.rs  digest.rs  intent.rs  lib.rs  vault_tools.rs  verify.rs  working_memory.rs
crates/ovp-publish/: Cargo.toml
crates/ovp-publish/src/: lib.rs  run.rs
crates/ovp-query/: Cargo.toml
crates/ovp-query/src/: lib.rs
crates/ovp-query/tests/: query_runcycle_output.rs
crates/ovp-rag/: Cargo.toml
crates/ovp-rag/src/: context.rs  corpus.rs  eval.rs  lib.rs  ranker.rs  retriever.rs
crates/ovp-rag/tests/: rag_e2e.rs
crates/ovp-scheduler/: Cargo.toml
crates/ovp-scheduler/src/: lib.rs
crates/ovp-server/: Cargo.toml
crates/ovp-server/examples/: gen_scale_vault.rs
crates/ovp-server/src/: ask_client.rs  graph.rs  lib.rs
crates/ovp-stores/: Cargo.toml
crates/ovp-stores/src/: canonical_fs.rs  composite.rs  lib.rs  vault_fs.rs  vault_scan.rs
crates/ovp-stores/tests/: canonical_fs.rs  e2e_interpret_then_apply.rs  evergreen_e2e.rs  knowledge_index_e2e.rs  moc_rebuild.rs  vault_fs.rs
(+1404 files in other folders)
