[workspace]
resolver = "2"
members = [
    "crates/ovp-core",
    "crates/ovp-cli",
    "crates/ovp-domain",
    "crates/ovp-llm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["OVP Next"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
