[workspace]
resolver = "2"
members = [
    "crates/ovp-core",
    "crates/ovp-cli",
    "crates/ovp-domain",
    "crates/ovp-llm",
    "crates/ovp-stores",
    "crates/ovp-app",
    "crates/ovp-run",
    "crates/ovp-query",
    "crates/ovp-lint",
    "crates/ovp-rag",
    "crates/ovp-auto",
    "crates/ovp-review",
    "crates/ovp-eval",
    "crates/ovp-daily",
    "crates/ovp-intake",
    "crates/ovp-index",
    "crates/ovp-console",
    "crates/ovp-enrich",
    "crates/ovp-memory",
    "crates/ovp-server",
    "crates/ovp-mcp",
    "crates/ovp-evolve",
    "crates/ovp-embed",
    "crates/ovp-scheduler",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "2.0.1"
edition = "2024"
# 1.88 = the floor of the `embed` dep tree (ort 2.0.0-rc.12 / time 0.3.53),
# which release builds enable (dist-workspace.toml `features`). Nothing pins an
# older toolchain (no rust-toolchain.toml; release CI installs current stable),
# so raising the declared MSRV beats pinning the embed deps back.
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["OVP Next"]
# Required by dist for GitHub release hosting. NOTE: this repo is currently
# PRIVATE — see docs/install.md for what that means for installers.
repository = "https://github.com/fakechris/obsidian_vault_pipeline"
homepage = "https://github.com/fakechris/obsidian_vault_pipeline"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
# Live LLM transport. Only compiled when a crate opts in via its own
# `anthropic`-style feature (optional dep). Blocking + rustls so there is
# no async runtime and no system OpenSSL dependency.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with. Inherits release wholesale —
# lto/opt-level/strip come from [profile.release]; don't re-set them here.
[profile.dist]
inherits = "release"
