[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-vault-pipeline"
version = "0.9.2"
description = "全自动Obsidian知识管理Pipeline - 生产级知识管理流水线"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OVP", email = "ovp@example.com" },
]
keywords = [
    "obsidian",
    "knowledge-management",
    "pipeline",
    "llm",
    "markdown",
    "zettelkasten",
    "evergreen",
    "moc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

dependencies = [
    "anthropic>=0.21.0",
    "openai>=1.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "watchdog>=3.0.0",
    "networkx>=3.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fakechris/obsidian_vault_pipeline"
Documentation = "https://github.com/fakechris/obsidian_vault_pipeline#readme"
Repository = "https://github.com/fakechris/obsidian_vault_pipeline"
Issues = "https://github.com/fakechris/obsidian_vault_pipeline/issues"

[project.scripts]
ovp = "ovp_pipeline.unified_pipeline_enhanced:main"
ovp-pipeline = "ovp_pipeline.unified_pipeline_enhanced:main"
ovp-article = "ovp_pipeline.auto_article_processor:main"
ovp-github = "ovp_pipeline.auto_github_processor:main"
ovp-paper = "ovp_pipeline.auto_paper_processor:main"
ovp-evergreen = "ovp_pipeline.commands.absorb:main"
ovp-moc = "ovp_pipeline.auto_moc_updater:main"
ovp-quality = "ovp_pipeline.batch_quality_checker:main"
ovp-clippings = "ovp_pipeline.clippings_processor:main"
ovp-autopilot = "ovp_pipeline.autopilot.daemon:main"
ovp-lint = "ovp_pipeline.lint_checker:main"
ovp-query = "ovp_pipeline.query_tool:main"
ovp-repair = "ovp_pipeline.commands.repair:main"
ovp-query-to-wiki = "ovp_pipeline.query_to_wiki:main"
ovp-batch-evergreen = "ovp_pipeline.batch_evergreen:main"
ovp-rebuild-registry = "ovp_pipeline.commands.rebuild_registry:main"
ovp-migrate-links = "ovp_pipeline.commands.migrate_broken_links:main"
ovp-merge-duplicates = "ovp_pipeline.commands.merge_duplicates:main"
ovp-promote-candidates = "ovp_pipeline.promote_candidates:main"
ovp-graph = "ovp_pipeline.graph_cli:main"
ovp-absorb = "ovp_pipeline.commands.absorb:main"
ovp-cleanup = "ovp_pipeline.commands.cleanup:main"
ovp-clean-processing-backups = "ovp_pipeline.commands.cleanup_processing_backups:main"
ovp-breakdown = "ovp_pipeline.commands.breakdown:main"
ovp-knowledge-index = "ovp_pipeline.commands.knowledge_index:main"
ovp-rebuild-summaries = "ovp_pipeline.commands.rebuild_summaries:main"
ovp-watch-progress = "ovp_pipeline.commands.watch_progress:main"
ovp-extract = "ovp_pipeline.commands.extract_profiles:main"
ovp-extract-preview = "ovp_pipeline.commands.extract_preview:main"
ovp-extraction-dashboard = "ovp_pipeline.commands.extraction_dashboard:main"
ovp-ops = "ovp_pipeline.commands.run_operations:main"
ovp-build-views = "ovp_pipeline.commands.build_views:main"
ovp-resolve-contradictions = "ovp_pipeline.commands.resolve_contradictions:main"
ovp-packs = "ovp_pipeline.commands.list_packs:main"
ovp-migrate-pack-provenance = "ovp_pipeline.commands.migrate_pack_provenance:main"
ovp-doctor = "ovp_pipeline.commands.doctor:main"
ovp-export = "ovp_pipeline.commands.export_artifact:main"
ovp-truth = "ovp_pipeline.commands.truth_api:main"
ovp-reuse = "ovp_pipeline.commands.reuse_report:main"
ovp-evidence = "ovp_pipeline.commands.evidence_verify:main"
ovp-promote = "ovp_pipeline.commands.promote:main"
ovp-init = "ovp_pipeline.commands.init_project:main"
ovp-ui = "ovp_pipeline.commands.ui_server:main"
ovp-mcp = "ovp_pipeline.commands.mcp:main"
ovp-note-type-normalize = "ovp_pipeline.commands.note_type_normalize:main"
ovp-concept-dedup = "ovp_pipeline.commands.concept_dedup:main"
ovp-promote-backfill = "ovp_pipeline.commands.promote_backfill:main"
ovp-link-suggest = "ovp_pipeline.commands.link_suggest:main"
ovp-build-crystals = "ovp_pipeline.commands.build_crystals:main"
ovp-working-memory = "ovp_pipeline.commands.working_memory:main"
ovp-prime = "ovp_pipeline.commands.prime:main"

[project.entry-points."ovp.packs"]
default-knowledge = "ovp_pipeline.packs.default_knowledge:get_pack"
research-tech = "ovp_pipeline.packs.research_tech:get_pack"

[tool.hatch.build.targets.wheel]
packages = ["src/ovp_pipeline"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
