[package]
name = "ovp-api-projection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared, drift-proof builders for the read-only /api/* response bodies: one source of truth for both ovp-server (live) and ovp-publish (static snapshot)."

[dependencies]
ovp-domain = { path = "../ovp-domain" }
ovp-index = { path = "../ovp-index" }
ovp-intake = { path = "../ovp-intake" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
