[package]
name = "ovp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OVP Next CLI"

[[bin]]
name = "ovp-next"
path = "src/main.rs"

[features]
default = []
# Forwards to ovp-llm/anthropic so `ovp-next interpret-article --client live`
# can make real API calls. Default build is replay-only + HTTP-free.
anthropic = ["ovp-llm/anthropic"]

[dependencies]
ovp-core = { path = "../ovp-core", features = ["fakes"] }
ovp-domain = { path = "../ovp-domain" }
ovp-llm = { path = "../ovp-llm" }
ovp-stores = { path = "../ovp-stores" }
ovp-app = { path = "../ovp-app" }
ovp-run = { path = "../ovp-run" }
ovp-query = { path = "../ovp-query" }
ovp-lint = { path = "../ovp-lint" }
ovp-rag = { path = "../ovp-rag" }
ovp-auto = { path = "../ovp-auto" }
ovp-review = { path = "../ovp-review" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
