[package]
name = "ovp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "OVP Next CLI"

[[bin]]
name = "ovp2"
path = "src/main.rs"

[features]
default = []
# Forwards to ovp-llm/anthropic so `ovp2 interpret-article/run-cycle --client
# live` can make real *LLM* API calls. The LLM transport stays feature-gated and
# OFF by default. NOTE: the binary is NOT HTTP-free regardless — `compare-run`
# (via ovp-eval) links reqwest to reach the external Nowledge Mem service. That
# HTTP is the M8 comparator's purpose, distinct from the gated LLM transport;
# neither is exercised by a normal offline run.
anthropic = ["ovp-llm/anthropic"]
# Forwards to ovp-intake/pinboard-live: the live Pinboard HTTP fetch for
# `pinboard-sync --live` / `daily --pinboard-live`. OFF by default — the
# offline build only ever reads export files.
pinboard-live = ["ovp-intake/pinboard-live"]
# Forwards to ovp-enrich/web-fetch-live: live HTTP fetch for enriching
# needs-content sources. OFF by default — the offline build only uses fixtures.
web-fetch-live = ["ovp-enrich/web-fetch-live"]
# Forwards to ovp-enrich/github-live: live GitHub API for enriching
# repo URLs. OFF by default — the offline build only uses fixtures.
github-live = ["ovp-enrich/github-live"]

[dependencies]
ovp-core = { path = "../ovp-core", features = ["fakes"] }
ovp-domain = { path = "../ovp-domain" }
ovp-llm = { path = "../ovp-llm" }
ovp-stores = { path = "../ovp-stores" }
ovp-app = { path = "../ovp-app" }
ovp-run = { path = "../ovp-run" }
ovp-query = { path = "../ovp-query" }
ovp-lint = { path = "../ovp-lint" }
ovp-rag = { path = "../ovp-rag" }
ovp-auto = { path = "../ovp-auto" }
ovp-review = { path = "../ovp-review" }
ovp-eval = { path = "../ovp-eval" }
ovp-daily = { path = "../ovp-daily" }
ovp-intake = { path = "../ovp-intake" }
ovp-index = { path = "../ovp-index" }
ovp-console = { path = "../ovp-console" }
ovp-enrich = { path = "../ovp-enrich" }
ovp-memory = { path = "../ovp-memory" }
ovp-server = { path = "../ovp-server" }
ovp-mcp = { path = "../ovp-mcp" }
ovp-evolve = { path = "../ovp-evolve" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
