[package]
name = "ovp-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ovp-index = { path = "../ovp-index" }
ovp-domain = { path = "../ovp-domain" }
ovp-api-projection = { path = "../ovp-api-projection" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
