[package]
name = "ovp-publish"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Snapshot the public-safe /api/* surface to a static site/ tree (durable knowledge + viz) for publishing to the public web."

[dependencies]
ovp-api-projection = { path = "../ovp-api-projection" }
ovp-index = { path = "../ovp-index" }
ovp-domain = { path = "../ovp-domain" }
serde.workspace = true
serde_json.workspace = true
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
