[package]
name = "ovp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ovp-index = { path = "../ovp-index" }
ovp-domain = { path = "../ovp-domain" }
ovp-intake = { path = "../ovp-intake" }
ovp-memory = { path = "../ovp-memory" }
ovp-llm = { path = "../ovp-llm" }
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true }
tiny_http = "0.12"
