[package]
name = "ovp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Live Anthropic-compatible transport for POST /api/ask (desktop + serve).
# Off by default so the offline test gauntlet stays HTTP-free; product builds
# enable it (dist-workspace, desktop app).
anthropic = ["ovp-llm/anthropic"]

[dependencies]
ovp-api-projection = { path = "../ovp-api-projection" }
ovp-index = { path = "../ovp-index" }
ovp-domain = { path = "../ovp-domain" }
ovp-intake = { path = "../ovp-intake" }
ovp-memory = { path = "../ovp-memory" }
ovp-llm = { path = "../ovp-llm" }
ovp-publish = { path = "../ovp-publish" }
ovp-scheduler = { path = "../ovp-scheduler" }
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true }
tiny_http = "0.12"

[dev-dependencies]
ovp-daily = { path = "../ovp-daily" }
